--- a/WebContent/WEB-INF/web.xml
+++ b/WebContent/WEB-INF/web.xml
@@ -9,8 +9,15 @@
 
     <!-- Register the DataSource which defined in META-INF/context.xml-->
     <resource-ref>
-        <description>MySQL DataSource example</description>
-        <res-ref-name>jdbc/moviedb</res-ref-name>
+        <description>Master MySQL DataSource</description>
+        <res-ref-name>jdbc/masterdb</res-ref-name>
+        <res-type>javax.sql.DataSource</res-type>
+        <res-auth>Container</res-auth>
+    </resource-ref>
+
+    <resource-ref>
+        <description>Slave MySQL DataSource</description>
+        <res-ref-name>jdbc/slavedb</res-ref-name>
         <res-type>javax.sql.DataSource</res-type>
         <res-auth>Container</res-auth>
     </resource-ref>
@@ -35,7 +42,7 @@
         <filter-name>CorsFilter</filter-name>
         <url-pattern>/*</url-pattern>
     </filter-mapping>
-
+    <!--
     <security-constraint>
         <web-resource-collection>
             <web-resource-name>HTTPSOnly</web-resource-name>
@@ -45,6 +52,7 @@
             <transport-guarantee>CONFIDENTIAL</transport-guarantee>
         </user-data-constraint>
     </security-constraint>
+    -->
     <!--
     <security-constraint>
         <web-resource-collection>
