--- a/k8s/fablix-ingress.yaml
+++ b/k8s/fablix-ingress.yaml
@@ -18,5 +18,5 @@ spec:
                 name: fabflix-service
                 port:
                   number: 8080
-            path: /
+            path: /fabflix
             pathType: Prefix
